[package]
name = "cargo-deps"
version = "0.1.1"
authors = ["root@i01.io"]
categories = ["development-tools::cargo-plugins"]
description = "Easy manage programs installed by `cargo install`."
documentation = "https://github.com/light4/cargo-deps"
keywords = ["cargo", "deps", "subcommand"]
license = "Apache-2.0/MIT"
repository = "https://github.com/light4/cargo-deps"
edition = "2021"

[dependencies]
clap = { version = "4.3", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
    "error-context",
] }
color-eyre = "0.6"
json = "0.12"
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.6"
xshell = "0.2"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
